package com.tradeshift.reaktive.protobuf;

message EventEnvelope {
    optional string persistenceId = 1;      
    optional uint64 sequenceNr = 2;
    optional uint64 offset = 3;
    optional bytes event = 4;
}